--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
     <body>
         <h1>Hello</h1>
         <p>Added a new line</p>
+
+        <div>This change is in branch feature-one</div>
     </body>
 </html>
